v1.1.3 
	New Features:
		- Added ability in getSig() to limit retrieval of significant genes to two provided conditions (arguments x & y). (reduces time for function call if you have a specific comparison in mind a priori)
		- When you specify x & y with getSig(), q-values are recalculated from just those selected tests to reduce impact of multiple testing correction.
		- You can now specify an 'alpha' for getSig() [ 0.05 by default to match cuffdiff default ] by which to filter the resulting significance calls.
		- Added csSpecificity() method:  This method returns a feature-X-condition matrix (similar to fpkmMatrix) that provides a 'condition-specificity' score  
			* defined as 1-(JSdist(p,q))
			  where p is is the density of expression (probability vector of log(FPKM+1)) of a given gene across all conditions, 
			  and q is the unit vector for that condition (ie. perfect expression in that particular condition)
			* specificity = 1.0 if the feature is expressed exclusively in that condition
		- Created csDendro() method: This method returns a object of class 'dendrogram' (and plots using grid) of JS distances between conditions for all genes in a CuffData, CuffGeneSet, or CuffFeatureSet object.
			* Useful for identifying relationships between conditions for subsets of features
		- New visual indication in several plot types that indicates the quantification status ('quant_stat' field) of a particular gene:condition. This information is useful to indicate whether or not
		to trust the expression values for a given gene under a specific condition, and may provide insight into outlier expression values.
			* This feature can be disabled by setting showStatus=F.
	
	Bugfixes:
		- Fixed bug in getGenes that may have resulted in long query lag for retrieving promoter diffData. As a result all calls to getGenes should be significanly faster.
		- CuffData fpkm argument 'features' now returns appropriate data.frame (includes previously un-reported data fields).