@@ -1,9 +1,13 @@
 v1.1.3 
 	New Features:
+		- getSig() has been split into two functions: getSig() now returns a vector of ids (no longer a list of vectors), and getSigTable() returns a 'testTable' of 
+		binary values indicating whether or not a gene was significant
+		in a particular comparison.
 		- Added ability in getSig() to limit retrieval of significant genes to two provided conditions (arguments x & y). (reduces time for function call if you have a specific comparison in mind a priori)
-		- When you specify x & y with getSig(), q-values are recalculated from just those selected tests to reduce impact of multiple testing correction.
-		- You can now specify an 'alpha' for getSig() [ 0.05 by default to match cuffdiff default ] by which to filter the resulting significance calls.
-		- Added csSpecificity() method:  This method returns a feature-X-condition matrix (similar to fpkmMatrix) that provides a 'condition-specificity' score  
+			* When you specify x & y with getSig(), q-values are recalculated from just those selected tests to reduce impact of multiple testing correction.
+			* If you do not specificy x & y getSig() will return a vector of tracking_ids for all comparisons (with appropriate MTC). 
+		- You can now specify an 'alpha' for getSig() and getSigTable() [ 0.05 by default to match cuffdiff default ] by which to filter the resulting significance calls.
+		- Added csSpecificity() method:  This method returns a feature-X-condition matrix (same shape as fpkmMatrix) that provides a 'condition-specificity' score  
 			* defined as 1-(JSdist(p,q))
 			  where p is is the density of expression (probability vector of log(FPKM+1)) of a given gene across all conditions, 
 			  and q is the unit vector for that condition (ie. perfect expression in that particular condition)
@@ -18,6 +22,7 @@ v1.1.3
 		- Fixed bug in getGenes that may have resulted in long query lag for retrieving promoter diffData. As a result all calls to getGenes should be significanly faster.
 		- CuffData fpkm argument 'features' now returns appropriate data.frame (includes previously un-reported data fields).
 		- Replaced all instances of 'ln_fold_change' with the actual 'log2_fold_change'.  Values were previously log2 fold change but database headers were not updated to reflect this.
+		- Fixed bug that could cause readCufflinks() to die with error when using reshape2::melt instead of reshape::melt.
 	
 	Notes:
 		- ***The structure of the underlying database has changed in this version.  As a consequence, you must rebuild you cuffData.db file to use new version. readCufflinks(rebuild=T)***
@@ -25,6 +30,7 @@ v1.1.3
 		- A 'fullnames' logical argument was added to fpkmMatrix. If True, rownames for fpkmMatrix will be a concatenation of gene_short_name and tracking_id.
 		This has the added benefit of making row labels in csHeatmap easier to read, as well as preserving uniqueness. 
 		- Slight speed improvements to JSdist (noticeable when using csCluster on large feature sets).
+		- 'testTable' argument to getSig() has been dropped in lieu of new getSigTable() method.
 	
 v1.1.1
 	Bugfixes:
